various dark mode style fix
Added switch for color scheme

--- a/airline-web/public/css-templates/treviso/css/style.css
+++ b/airline-web/public/css-templates/treviso/css/style.css
@@ -880,22 +880,26 @@ input {
 	font-size: 12px;
 /* 	width: 500px; */
 /* 	height: 50px; */
-	border: 1px solid #6093e7;
+	border: 1px solid var(--input-border-color);
 	outline: none;
 	border-radius: 3px;
 /* 	margin-bottom: 20px; */
 	text-align: center;
+	background-color: var(--input-background-color);
+	color: var(--input-color);
 }
 textarea {
 	line-height: 50px;
 	height: 200px;
 	font-size: 18px;
 	width: 500px;
-	border: 1px solid #6093e7;
+	border: 1px solid var(--input-border-color);
 	outline: none;
 	border-radius: 3px;
 	margin-bottom: 20px;
 	text-align: center;
+	background-color: var(--input-background-color);
+	color: var(--input-color);
 }
 
 
